--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React interface for CRUD operations",
   "main": "index.js",
   "scripts": {
-    "dev:api": "nodemon ./api/index.js",
+    "dev:api": "nodemon ./api/index.js --watch ./api",
     "dev:frontend": "webpack serve --config frontend/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
